--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -333,17 +333,31 @@ carga eléctrica de gotas de lluvia}
 \section{Análisis del código existente}
 
 \begin{frame}{Lectura de datos}
-  \begin{itemize}
-    \item Formato de entrada: archivo `.lvm' con 3 columnas
-    \begin{itemize}
-      \item Tiempo
-      \item Señal del anillo
-      \item Señal de la placa
-    \end{itemize}
-  \end{itemize}
+  \textbf{Formato de entrada:} archivo `.lvm' con 3 columnas
+  
+  \vspace{0.5cm}
+  \centering
+  \begin{tabular}{ccc}
+    \toprule
+    \textbf{Tiempo (s)} & \textbf{Señal Anillo} & \textbf{Señal Placa} \\
+    \midrule
+    0.000000 & 0.272755 & 0.162585 \\
+    0.000200 & 0.272603 & 0.159991 \\
+    0.000400 & 0.273518 & 0.145190 \\
+    0.000600 & 0.278248 & 0.160296 \\
+    0.000800 & 0.268635 & 0.154192 \\
+    0.001000 & 0.276722 & 0.161211 \\
+    0.001200 & 0.275044 & 0.150683 \\
+    0.001400 & 0.272297 & 0.157855 \\
+    0.001600 & 0.265736 & 0.154040 \\
+    0.001800 & 0.277791 & 0.158770 \\
+    \bottomrule
+  \end{tabular}
   
   \note{
     El primer programa, promedio_general.f, recibe como entrada las señales crudas registradas por el instrumento. El formato de los archivos es un archivo .lvm que contiene 3 columnas: tiempo, señal del anillo y señal de la placa.
+    
+    Como pueden ver en la tabla, cada línea del archivo contiene un punto de tiempo junto con los valores de ambos sensores. El tiempo está en segundos y las señales están en voltios.
     
     El segundo programa, buscador_de_gotas.f, lee los archivos de datos preprocesados con el paso anterior. Se pueden leer hasta 36 archivos, y cada archivo puede contener hasta 13 millones de muestras.
   }
@@ -358,25 +372,28 @@ carga eléctrica de gotas de lluvia}
 \end{frame}
 
 \begin{frame}{Remoción de offset}
-    \textbf{Remoción de offset:} Para cada punto, se calcula el promedio de 5000 puntos circundantes y se resta
+    \textbf{Remoción de offset:} Para cada punto, se calcula el promedio de 5001 puntos circundantes y se resta ese valor
     \vspace{0.2cm}
     \begin{center}
     \includegraphics[width=0.7\textwidth]{./figures/remocion_offset.png}
     \end{center}
     \vspace{0.2cm}
+    La implementación actual tiene complejidad $O(5001n) = O(n)$
 \end{frame}
 
 \begin{frame}{Detección de pulsos}
   \textbf{Sistema de umbrales adaptativos:}
   \begin{itemize}
     \item 1000 umbrales desde 2.00 hasta 0.02
-    \item Para cada umbral, busca pares de puntos consecutivos que superen el umbral en ambas señales
-    \item Separación máxima de 100 puntos entre señales
+    \item Para cada umbral, busca pares de puntos consecutivos que superen el umbral en ambas señales, con separación máxima de 100 puntos entre señales
   \end{itemize}
   
-  \vspace{0.3cm}
-  \centering
-  \includegraphics[width=0.7\textwidth]{../escrito/figures/sensores_gota.png}
+  \vspace{0.1cm}
+  \begin{center}
+  \includegraphics[width=0.6\textwidth]{../escrito/figures/sensores_gota.png}
+  \end{center}
+  \vspace{0.1cm}
+  En el peor caso, el algoritmo tiene complejidad $O(1000 \cdot 100 \cdot n) = O(n)$
   
   \note{
     El segundo programa implementa un sistema de umbrales que varía dinámicamente desde un valor superior de 2.00 hasta uno inferior de 0.02 a lo largo de 1000 pasos. Esta variación permite detectar pulsos de diferentes amplitudes.
@@ -457,16 +474,17 @@ carga eléctrica de gotas de lluvia}
 
 \begin{frame}{Filtros de calidad}
 
-  Una vez detectados y delimitados los pulsos, se aplican filtros de calidad para separar los pulsos válidos de los falsos positivos.
-
-  \vspace{0.5cm}
-
-  \textbf{Filtros:}
+  Una vez detectados y delimitados los pulsos, se aplican los siguientes filtros de calidad:
   \begin{enumerate}
     \item \textbf{Carga:} $|q| > 0.2$ en ambos canales
     \item \textbf{Signo:} Mismo signo en ambos canales
     \item \textbf{Velocidad:} Entre 0.7125 y 11.4 m/s
   \end{enumerate}
+  
+  \vspace{0.3cm}
+  \begin{center}
+  \includegraphics[width=0.7\textwidth]{figures/drops_falla_velocidad.png}
+  \end{center}
   
   \note{
     Durante el proceso de detección, el algoritmo identifica tanto pulsos válidos que corresponden a gotas de lluvia reales, así como falsos positivos claros que corresponden a ruido o detecciones espurias.
@@ -482,64 +500,67 @@ carga eléctrica de gotas de lluvia}
 \end{frame}
 
 \begin{frame}{Sistema de evaluación y ordenamiento}
-
-  Una vez tenemos los pulsos, los evaluamos para determinar que tan buenos son. Las metricas fueron desarrolladas mediante ajuste manual y experimental.
-
-  \vspace{0.2cm}
-  
   \textbf{5 criterios de evaluación:}
   \begin{itemize}
-    \item \textbf{Eval1, Eval2:} Diferencia cuadrática con modelos teóricos del sensor del anillo y la placa respectivamente
-    \item \textbf{Eval3:} Desviación de proporción carga (87\% anillo/placa)
-    \item \textbf{Eval4:} Desviación de proporción ancho (79\% placa/anillo)
-    \item \textbf{Eval5:} Proporción de señal en rango de ruido
+    \item Diferencia con modelos teóricos (anillo y placa)
+    \item Desviación de proporción carga (87\% anillo/placa)
+    \item Desviación de proporción ancho (79\% placa/anillo)
+    \item Proporción de señal en rango de ruido
   \end{itemize}
   
-  \vspace{0.2cm}
-  \textbf{Puntuación total:}
-  $$eval = \ln(1 + eval1) + \ln(1 + eval2) + 3 \cdot eval3 + 3 \cdot eval4 + eval5^2$$
-  
-  \vspace{0.2cm}
-  Menor puntuación = mejor calidad (rango típico: $[0, 20]$)
+  \vspace{0.3cm}
+  \begin{columns}
+    \column{0.5\textwidth}
+    \centering
+    \textbf{Gota de buena calidad}
+    \vspace{0.2cm}
+    \includegraphics[width=0.9\textwidth]{figures/gota_buena.png}
+    
+    \column{0.5\textwidth}
+    \centering
+    \textbf{Gota de mala calidad}
+    \vspace{0.2cm}
+    \includegraphics[width=0.9\textwidth]{figures/gota_mala.png}
+
+  \end{columns}
   
   \note{
     Una vez aplicados los filtros de calidad, las detecciones restantes corresponden principalmente a gotas. Algunas de estas presentan señales muy limpias y bien definidas, mientras que otras pueden tener pequeñas distorsiones, ruido residual, o características que sugieren mediciones menos precisas.
     
     Para clasificar las gotas obtenidas, se implementa un sistema de puntuación que evalúa la calidad de cada detección mediante cinco criterios independientes. Este sistema fue desarrollado mediante ajuste manual y experimental.
     
-    Eval1 y Eval2 miden la diferencia cuadrática entre la integral de la señal real y dos modelos teóricos distintos del pulso, uno para el anillo y otro para la placa.
+    Los criterios incluyen: diferencia con modelos teóricos para el anillo y la placa, desviación de la proporción esperada entre cargas del anillo y la placa - que experimentalmente es aproximadamente 87 por ciento -, desviación de la proporción esperada del ancho entre los picos - que es aproximadamente 79 por ciento -, y la proporción de señal en el rango de ruido.
     
-    Eval3 mide la desviación de la proporción esperada entre cargas del anillo y la placa. Experimentalmente se observó que la carga medida en el anillo es aproximadamente el 87 por ciento de la carga medida en la placa.
+    Las evaluaciones se combinan para obtener una puntuación total. Mientras más chico sea el valor de la puntuación, mejor es la calidad de la gota.
     
-    Eval4 mide la desviación de la proporción esperada del ancho entre los picos de la señal de la placa y el anillo. Experimentalmente se observó que el ancho del pulso de la placa es aproximadamente el 79 por ciento del ancho del pulso del anillo.
-    
-    Eval5 mide la proporción de señal en el rango de ruido, entre -0.02 y 0.02.
-    
-    Las evaluaciones se combinan para obtener una puntuación total. Mientras más chico sea el valor de la puntuación total, mejor es la calidad de la gota. El rango típico está entre 0 y 20.
+    En las imágenes pueden ver ejemplos de una gota de buena calidad y una de mala calidad, mostrando la diferencia en la limpieza y definición de las señales.
   }
 \end{frame}
 
-\begin{frame}{Problemas de diseño}
+\begin{frame}{Beneficios de la refactorización}
   \begin{columns}[t]
     \column{0.5\textwidth}
     \vspace{0pt}
+    \textbf{Problemas de diseño:}
     \begin{itemize}
-      \item \textbf{Sin modularización:} Todo en entorno global
-      \item \textbf{Variables sin contexto:} `s', `ss', `i', `j', `w', `k', etc.
-      \item \textbf{Código duplicado:} Lógica repetida con pequeños cambios
+      \item Sin modularización
+      \item Variables sin contexto
+      \item Código duplicado
+      \item I/O hard-codeado
+      \item Perdida de datos
+      \item Filtros post-detección
     \end{itemize}
     
     \column{0.5\textwidth}
     \vspace{0pt}
+    \textbf{Beneficios de la refactorización:}
     \begin{itemize}
-      \item \textbf{I/O hard-codeado:} Nombres de archivos en código
-      \item \textbf{División forzada:} Alto consumo de memoria obliga a procesar por partes
-      \item \textbf{Pérdida de datos:} Pulsos en medio de cortes no se procesan
+      \item Mantenibilidad
+      \item Reutilizabilidad
+      \item Verificación
+      \item Colaboración
     \end{itemize}
   \end{columns}
-  
-  \vspace{0.5cm}
-  Cualquier modificación requiere entender todo el código
   
   \note{
     El código existente presenta problemas de diseño que dificultan su comprensión y mantenimiento.
@@ -553,52 +574,7 @@ carga eléctrica de gotas de lluvia}
     En cuarto lugar, la lectura de archivos está hard-codeada. El programa requiere cambiar los nombres de los archivos a procesar, ya que los nombres de estos son constantes en el código en vez de ser parámetros. Además, hay un bloque de código que permite leer hasta 36 archivos, que se debe comentar o descomentar dependiendo de la cantidad en la que se dividió el conjunto de datos a procesar.
     
     Finalmente, hay mucha duplicación de código. La cantidad de código repetido es muy alta. Hay mucha lógica la cual solo tiene un cambio en el signo, un cambio en un if statement o un cambio en una variable. Esto hace que sea difícil mantener el código ya que hay que modificarlo en varios lugares.
-  }
-\end{frame}
 
-\begin{frame}{Problemas de rendimiento}
-  \textbf{Remoción de offset:}
-  \begin{itemize}
-    \item Para cada punto: suma de 5001 valores y 5001 divisiones
-    \item Complejidad: $O(5001n) = O(n)$ pero con constante muy alta
-  \end{itemize}
-  
-  \vspace{0.5cm}
-  \textbf{Detección de pulsos:}
-  \begin{itemize}
-    \item 1000 umbrales $\times$ todos los puntos $\times$ 100 puntos de búsqueda
-    \item Complejidad: $O(100000 \cdot n) = O(n)$ pero con constante extremadamente alta
-  \end{itemize}
-  
-  \vspace{0.3cm}
-  \centering
-  \textcolor{red}{\textbf{Ambos son $O(n)$ pero con constantes muy altas}}
-  
-  \note{
-    Al analizar el rendimiento del código, se encontraron dos áreas de potenciales mejoras.
-    
-    Primero, el algoritmo de remoción de offset es muy ineficiente. Para cada punto, se hace una suma de 5001 valores divididos por 5001, resultando en una complejidad O(5001n) que es O(n). Obviamente se trata de una complejidad lineal, pero no solo que la constante es altísima por el factor de 5001, sino que también se realizan 5001 divisiones por cada punto, que no es la operación más eficiente en un procesador.
-    
-    Segundo, la detección de pulsos. Si analizamos la complejidad de la implementación de este algoritmo, podemos ver que para cada umbral - 1000 umbrales - se revisa todo el array de las señales. Si dos puntos consecutivos superan el umbral en la primera señal, se revisa hasta un total de 100 puntos en la segunda señal. Esto resulta en una complejidad O(100000 por n) que es O(n). Idéntico al caso anterior, se trata de una complejidad lineal, pero con una constante extremadamente alta.
-    
-    Ambos algoritmos son O(n) pero con constantes muy altas, lo que los hace extremadamente lentos en la práctica.
-  }
-\end{frame}
-
-\begin{frame}{Motivación de la refactorización}
-  \textbf{Beneficios de la refactorización:}
-  \begin{itemize}
-    \item \textbf{Mantenibilidad:} Menos código por revisar, lógica en funciones pequeñas
-    \item \textbf{Reutilizabilidad:} Código reutilizable para otros experimentos o instrumentos
-    \item \textbf{Verificación:} Pruebas unitarias de cada función, no del programa completo
-    \item \textbf{Colaboración:} Otros investigadores pueden entender y modificar el código más fácilmente
-  \end{itemize}
-  
-  \vspace{0.5cm}
-  \centering
-  \textbf{Necesidad:} Resolver problemas de diseño y rendimiento para mejorar el sistema
-  
-  \note{
     Todas las problemáticas mencionadas anteriormente - tanto de diseño como de rendimiento - motivan a realizar una refactorización del código. Esta refactorización tiene muchos beneficios.
     
     Primero, mantenibilidad. Cualquier corrección de errores o implementación de mejoras requiere revisar y entender menos código, ya que la lógica se encuentra en funciones más pequeñas.
